crates/oxidoc/tests/snapshots/golden_writer__html__common__blockquote.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<blockquote>
<p>quoted</p>
<p>more lines here</p>
</blockquote>
