crates/oxidoc/tests/snapshots/golden_writer__html__common__bullet-list-loose.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ul>
<li><p>a</p></li>
<li><p>b</p></li>
<li><p>c</p></li>
</ul>
