crates/oxidoc/tests/snapshots/golden_writer__html__common__bullet-list-tight.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ul>
<li>a</li>
<li>b</li>
<li>c</li>
</ul>
