crates/oxidoc/tests/snapshots/golden_writer__html__common__bullet-nested.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ul>
<li><p>outer</p>
<ul>
<li>inner one</li>
<li>inner two</li>
</ul></li>
</ul>
