crates/oxidoc/tests/snapshots/golden_writer__html__common__citation.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p>see <span class="citation" data-cites="knuth1984">[@knuth1984]</span>
for details</p>
