crates/oxidoc/tests/snapshots/golden_writer__html__common__code-block-id.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<pre id="snippet"><code>plain code</code></pre>
