crates/oxidoc/tests/snapshots/golden_writer__html__common__code-block-indented.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<pre><code>indented code
second line</code></pre>
