crates/oxidoc/tests/snapshots/golden_writer__html__common__code-block-lang.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<pre class="rust"><code>let s = &quot;hi&quot;;
x &lt; y &amp;&amp; y &gt; z</code></pre>
