crates/oxidoc/tests/snapshots/golden_writer__html__common__code-block-numbered.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<pre class="python numberLines"><code>print(1)
print(2)</code></pre>
