crates/oxidoc/tests/snapshots/golden_writer__html__common__definition-list-loose.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<dl>
<dt>Term</dt>
<dd>
<p>Definition one</p>
</dd>
<dd>
<p>Definition two</p>
</dd>
</dl>
