crates/oxidoc/tests/snapshots/golden_writer__html__common__definition-list-tight.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<dl>
<dt>Term</dt>
<dd>
Definition one
</dd>
<dd>
Definition two
</dd>
</dl>
