crates/oxidoc/tests/snapshots/golden_writer__html__common__definition-term-colon.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<dl>
<dt>term: with colon</dt>
<dd>
definition
</dd>
</dl>
